# FPGAEmulator

./: .gitignore  README.md  pyproject.toml
examples/: blinky_uart.v  board_spec.json  cdc_unsafe.v  counter.v  counter_up5k.pcf  ice40_lvcmos33.ibs  mac_pipelined.v  mac_unpipelined.v  ram_sync.v
fpgaforge/: __init__.py  bootstrap.py  cache.py  cdc.py  cli.py  constraints.py  corpus.py  devices.py  diagnostics.py  features.py  model.py  optimizer.py  pins.py  readiness.py  reports.py  reward.py  rtl_transform.py  sdf_timing.py  selftest.py  timing.py  vcd.py
fpgaforge/backends/: __init__.py  base.py  ecp5.py  gowin.py  ice40.py  mock.py  quartus.py  vivado.py
fpgaforge/emulator/: __init__.py  bitstream.py  emulator.py  fabric.py  mutation.py  netlist.py  peripherals.py  reconstruct.py  timing_emu.py
fpgaforge/physics/: __init__.py  crosstalk.py  fieldsolver.py  ibis.py  interfaces.py  pdn.py  power.py  pvt.py  signal_integrity.py  signoff.py
fpgaforge/virtual/: __init__.py  board.py  vfpga.py
tests/: test_bootstrap.py  test_cache.py  test_cdc.py  test_corpus.py  test_devices.py  test_diagnostics.py  test_ecp5.py  test_emulator.py  test_features.py  test_model.py  test_mutation.py  test_optimizer.py  test_physics.py  test_pins.py  test_prove_netlist.py  test_prove_smt.py  test_readiness.py  test_reports.py  test_reward.py  test_sdf_timing.py  test_selftest.py  test_timing.py  test_vcd_activity.py  test_vendor_backends.py  test_verify_coverage.py  test_virtual.py
tests/data/: yosys_stat_sample.txt
