[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpgaforge"
version = "0.1.0"
description = "An AI-native FPGA implementation engine: run RTL through an open-source flow, collect a standardized corpus, predict Fmax, and optimize implementation knobs automatically."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "fpgaforge" }]
keywords = ["fpga", "eda", "yosys", "nextpnr", "ice40", "optimization", "machine-learning"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fpgaforge = "fpgaforge.cli:app"

[tool.setuptools.packages.find]
include = ["fpgaforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
